--- a/pagina/index.html
+++ b/pagina/index.html
@@ -29,6 +29,9 @@
                 <button id="btnm" type="button" class="btn btn-outline-warning"><a id="linkbtn" href="pages/cat.html">categorias</a></button>
                 <button id="btnm" type="button" class="btn btn-outline-warning"><a id="linkbtn" href="">contactos</a></button>
               </div>
+              <div class="btn-group" id="btn" role="group" aria-label="Basic outlined example">
+                <button id="btnm" type="button" class="btn btn-outline-warning"><a id="linkbtn" href=""><img src="img/carrito.png" width="30px" height="30px" alt="" srcset=""></a></button>
+              </div>
         </div>
         <div class="card text-center" id="cardservi">
             <div class="card-header text-warning">
