--- a/carrito.html
+++ b/carrito.html
@@ -45,7 +45,7 @@
         <br><br>
 
         <div class="d-grid gap-2 d-md-flex justify-content-md-end" id="btncargaProd">
-            <button class="btn btn-warning me-md-2" type="button"><img src="../../../../img/addCarrito.png" width="25px" height="25px" alt="Agregar Al Carrito"></button>
+            <button class="btn btn-warning me-md-2" type="button"><img src="../../../../img/addCarrito.png" id="imgguar" width="25px" height="25px" alt="Agregar Al Carrito"></button>
         </div>
 
     </div>
